# ftrace-remake

./: .gitignore  CMakeLists.txt  README.md
src/: argument_parser.cpp  ftrace.cpp  log.cpp
src/include/: argument_parser.h  log.hpp
